# fluxlab_dsp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  fluxlab.jucer  ios.toolchain.cmake
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/Flux Lab.xcodeproj/: project.pbxproj
Builds/MacOSX/Flux Lab.xcodeproj/project.xcworkspace/xcuserdata/sebastienhalbeher.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/Flux Lab.xcodeproj/xcshareddata/xcschemes/: Flux Lab - VST3.xcscheme
Builds/MacOSX/Flux Lab.xcodeproj/xcuserdata/sebastienhalbeher.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Builds/MacOSX/Flux Lab.xcodeproj/xcuserdata/sebastienhalbeher.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/iOS/: Info-Standalone_Plugin.plist
Builds/iOS/Flux Lab.xcodeproj/: project.pbxproj
CMake/: cpm.cmake  utils.cmake  warnings.cmake
Code/Include/: AppLayout.h  AudioEngine.h  ChorusProcess.h  CompressorProcess.h  DJFilterProcess.h  DelayProcess.h  FFT.h  OBTAINBeatTracker.h  Parameters.h  PhaserProcess.h  PluginProcessor.h
Code/Include/Component/: FXGrid.h  TempoSection.h
Code/Include/Component/Section/: BPMDisplay.h  Chorus.h  Compressor.h  DJFilter.h  Delay.h  Phaser.h  Reverb.h  SectionIDs.h  Tempo.h  Test.h
Code/Source/: AppLayout.cpp  AppLogger.cpp  ChorusProcess.cpp  CompressorProcess.cpp  DJFilterProcess.cpp  DelayProcess.cpp  OBTAINBeatTracker.cpp  Parameters.cpp  PhaserProcess.cpp  PluginEditor.cpp  PluginProcessor.cpp  ReverbProcess.cpp
Code/Source/Component/: AudioEngine.cpp  FXGrid.cpp  ReverbProcess.cpp
Code/Source/Component/Section/: BPMDisplay.cpp  Chorus.cpp  Compressor.cpp  DJFilter.cpp  Delay.cpp  Phaser.cpp  Reverb.cpp  Tempo.cpp  Test.cpp
Include/: AppLayout.h  AppLogger.h  AudioEngine.h  AudioProcess.h  BoxesLayout.h  FluxCalculator.h  NoteLogger.h  OBTAINBeatTracker.h  Parameters.h  PluginEditor.h  PluginProcessor.h  ReverbProcess.h
Include/Component/: FXGrid.h  TempoSection.h
Include/Component/Section/: BPMDisplay.h  Reverb.h  Test.h
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h  include_nierika_dsp.cpp
Packaging/: icon.icns
Scripts/: generate_iconset.sh
Source/: AppLayout.cpp  AppLogger.cpp  FFT.cpp  FluxCalculator.cpp  OBTAINBeatTracker.cpp  PluginEditor.cpp  PluginProcessor.cpp
Source/Component/: AudioEngine.cpp  FXGrid.cpp  TempoSection.cpp
Source/Component/Section/: BPMDisplay.cpp  Reverb.cpp  Test.cpp
